--- a/index.html
+++ b/index.html
@@ -173,6 +173,14 @@
 <ul>
 <li><a href="https://github.com/cheran-senthil/PyRival">PyRival</a></li>
 </ul>
+<h2 id="disclaimer"><a class="header" href="#disclaimer">Disclaimer</a></h2>
+<p><strong>None of the codes from this document should be used in any other fields besides competitive programming!</strong> Every code here is strictly designed for CP, thus there are basically no guards for possible errors.</p>
+<p>As stated from the license below, I do not hold any responsibilities for any problems happened from using these snippets. Never use it for production! I never guarantee my codes to work perfectly.</p>
+<h2 id="license"><a class="header" href="#license">License</a></h2>
+<p>Copyright 2023 BamgoeSN</p>
+<p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &quot;Software&quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
+<p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>
+<p>THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>
 
                     </main>
 
