--- a/graphs/dijkstra.html
+++ b/graphs/dijkstra.html
@@ -228,6 +228,60 @@ println!(&quot;{:?}&quot;, dijkstra(&amp;g, 0));
 </span><span class="boring">    dist
 </span><span class="boring">}</span></code></pre></pre>
 <h2 id="code"><a class="header" href="#code">Code</a></h2>
+<pre><code class="language-rust noplayground">trait HasNz {
+    type NzType;
+    fn into_nz(self) -&gt; Option&lt;Self::NzType&gt;;
+    fn retrieve(nz: Self::NzType) -&gt; Self;
+}
+
+macro_rules! impl_hasnz {
+    ($($t:ty, $n:ty);*) =&gt; { $(
+        impl HasNz for $t {
+            type NzType = $n;
+            fn into_nz(self) -&gt; Option&lt;$n&gt; { &lt;$n&gt;::new(self) }
+            fn retrieve(nz: $n) -&gt; Self { nz.get() }
+        }
+    )* };
+}
+
+use std::num::*;
+impl_hasnz!(i8, NonZeroI8; i16, NonZeroI16; i32, NonZeroI32; i64, NonZeroI64; i128, NonZeroI128; isize, NonZeroIsize);
+impl_hasnz!(u8, NonZeroU8; u16, NonZeroU16; u32, NonZeroU32; u64, NonZeroU64; u128, NonZeroU128; usize, NonZeroUsize);
+
+use std::ops::*;
+fn dijkstra&lt;T&gt;(graph: &amp;Graph&lt;T&gt;, src: usize) -&gt; Vec&lt;Option&lt;T&gt;&gt;
+where
+    T: Copy + From&lt;u8&gt; + Add&lt;Output = T&gt; + Sub&lt;Output = T&gt; + Eq + Ord + HasNz,
+    &lt;T as HasNz&gt;::NzType: Copy,
+{
+    use core::cmp::Reverse;
+    use std::collections::BinaryHeap;
+
+    let mut dist: Vec&lt;Option&lt;T::NzType&gt;&gt; = vec![None; graph.n];
+    let mut heap: BinaryHeap&lt;(Reverse&lt;T&gt;, usize)&gt; = BinaryHeap::new();
+    heap.push((Reverse(1.into()), src));
+
+    while let Some((Reverse(curr_cost), curr)) = heap.pop() {
+        if dist[curr].map_or(false, |x| T::retrieve(x) &lt; curr_cost) {
+            continue;
+        }
+        dist[curr] = curr_cost.into_nz();
+
+        for (next, &amp;weight) in graph.neighbor(curr) {
+            let next_cost = curr_cost + weight;
+            if dist[next].map_or(true, |x| T::retrieve(x) &gt; next_cost) {
+                dist[next] = next_cost.into_nz();
+                heap.push((Reverse(next_cost), next));
+            }
+        }
+    }
+
+    dist.iter()
+        .map(|x| x.map(|x| T::retrieve(x) - 1.into()))
+        .collect()
+}</code></pre>
+<h3 id="compact-version"><a class="header" href="#compact-version">Compact Version</a></h3>
+<p>The code is much compact, but the performance is slightly worse than the one above. This version seems to be approximately 10% slower, but none of the definitive tests have been done to check it.</p>
 <pre><code class="language-rust noplayground">fn dijkstra&lt;T: Copy + From&lt;u8&gt; + std::ops::Add&lt;Output = T&gt; + Eq + Ord&gt;(
     graph: &amp;Graph&lt;T&gt;,
     src: usize,
