deploy: a0510977035da8b8e6993bc571e4f51eb3c5ec1b

--- a/print.html
+++ b/print.html
@@ -177,6 +177,7 @@
 <h2 id="disclaimer"><a class="header" href="#disclaimer">Disclaimer</a></h2>
 <p><strong>None of the codes from this document should be used in any other fields besides competitive programming!</strong> Every code here is strictly designed for CP, thus there are basically no guards for possible errors.</p>
 <p>As stated from the license below, I do not hold any responsibilities for any problems happened from using these snippets. Never use it for production! I never guarantee my codes to work perfectly.</p>
+<p>MIT license states that the user should include the license to copies or redistributions, but I don't really care about adding it to the code. This license should be just considered as a placeholder, so that I can fully open users to use my snippets completely freely, while I can be safe from getting sued. I'm planning to replace the license to something else (something similar to IDGAF license but less rude) whenever I find one.</p>
 <h2 id="license"><a class="header" href="#license">License</a></h2>
 <p>Copyright 2023 BamgoeSN</p>
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the &quot;Software&quot;), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>
