--- a/print.html
+++ b/print.html
@@ -84,7 +84,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="numerical/isqrt.html"><strong aria-hidden="true">6.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="numerical/sieve.html"><strong aria-hidden="true">7.</strong> Sieve</a></li><li class="chapter-item expanded "><a href="numerical/linrec/intro.html"><strong aria-hidden="true">8.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="numerical/linrec/berlekamp.html"><strong aria-hidden="true">8.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="numerical/linrec/kitamasa.html"><strong aria-hidden="true">8.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="numerical/linrec/bostanmori.html"><strong aria-hidden="true">8.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="datastructure/matrix.html"><strong aria-hidden="true">9.</strong> Fast n-dimensional Array</a></li><li class="chapter-item expanded "><a href="datastructure/bitarray.html"><strong aria-hidden="true">10.</strong> Bitset</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/intro.html"><strong aria-hidden="true">11.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="datastructure/segtree/segtree.html"><strong aria-hidden="true">11.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/fenwick.html"><strong aria-hidden="true">11.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/lazyseg.html"><strong aria-hidden="true">11.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><a href="datastructure/rope.html"><strong aria-hidden="true">12.</strong> Rope</a></li><li class="chapter-item expanded affix "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="graphs/adjlist.html"><strong aria-hidden="true">13.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="graphs/dijkstra.html"><strong aria-hidden="true">14.</strong> Dijkstra</a></li><li class="chapter-item expanded "><a href="graphs/dsu.html"><strong aria-hidden="true">15.</strong> Disjoint Set Union</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="graphs/wdsu.html"><strong aria-hidden="true">15.1.</strong> Weighted DSU</a></li></ol></li><li class="chapter-item expanded "><a href="graphs/scc.html"><strong aria-hidden="true">16.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="graphs/2sat.html"><strong aria-hidden="true">17.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="strings/kmp.html"><strong aria-hidden="true">18.</strong> KMP</a></li><li class="chapter-item expanded "><a href="strings/manacher.html"><strong aria-hidden="true">19.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="strings/salcp.html"><strong aria-hidden="true">20.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="geometry/convexhull.html"><strong aria-hidden="true">21.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="unclass/valcomp.html"><strong aria-hidden="true">22.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="unclass/lis.html"><strong aria-hidden="true">23.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="unclass/mos.html"><strong aria-hidden="true">24.</strong> Mo's</a></li><li class="chapter-item expanded "><a href="unclass/bigint.html"><strong aria-hidden="true">25.</strong> Arbitrary-Precision Integer</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="misc/fastio.html"><strong aria-hidden="true">26.</strong> Fast IO</a></li><li class="chapter-item expanded "><a href="misc/macro.html"><strong aria-hidden="true">27.</strong> Macros</a></li><li class="chapter-item expanded "><a href="misc/zero_one_trait.html"><strong aria-hidden="true">28.</strong> Zero/One Trait (Deprecated)</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="intro.html">Introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Deterministic Miller-Rabin Primality Test</a></li><li class="chapter-item expanded "><a href="algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Pollard's Rho Algorithm</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="numerical/isqrt.html"><strong aria-hidden="true">6.</strong> Integer Square Root</a></li><li class="chapter-item expanded "><a href="numerical/sieve.html"><strong aria-hidden="true">7.</strong> Sieve</a></li><li class="chapter-item expanded "><a href="numerical/linrec/intro.html"><strong aria-hidden="true">8.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="numerical/linrec/berlekamp.html"><strong aria-hidden="true">8.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="numerical/linrec/kitamasa.html"><strong aria-hidden="true">8.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="numerical/linrec/bostanmori.html"><strong aria-hidden="true">8.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="datastructure/matrix.html"><strong aria-hidden="true">9.</strong> Fast n-dimensional Array</a></li><li class="chapter-item expanded "><a href="datastructure/bitarray.html"><strong aria-hidden="true">10.</strong> Bitset</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/intro.html"><strong aria-hidden="true">11.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="datastructure/segtree/segtree.html"><strong aria-hidden="true">11.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/fenwick.html"><strong aria-hidden="true">11.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/lazyseg.html"><strong aria-hidden="true">11.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><a href="datastructure/rope.html"><strong aria-hidden="true">12.</strong> Rope</a></li><li class="chapter-item expanded affix "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="graphs/adjlist.html"><strong aria-hidden="true">13.</strong> Adjacency List Graph Representation</a></li><li class="chapter-item expanded "><a href="graphs/dijkstra.html"><strong aria-hidden="true">14.</strong> Dijkstra</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="graphs/dial.html"><strong aria-hidden="true">14.1.</strong> Dial</a></li></ol></li><li class="chapter-item expanded "><a href="graphs/dsu.html"><strong aria-hidden="true">15.</strong> Disjoint Set Union</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="graphs/wdsu.html"><strong aria-hidden="true">15.1.</strong> Weighted DSU</a></li></ol></li><li class="chapter-item expanded "><a href="graphs/scc.html"><strong aria-hidden="true">16.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="graphs/2sat.html"><strong aria-hidden="true">17.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Strings</li><li class="chapter-item expanded "><a href="strings/kmp.html"><strong aria-hidden="true">18.</strong> KMP</a></li><li class="chapter-item expanded "><a href="strings/manacher.html"><strong aria-hidden="true">19.</strong> Manacher</a></li><li class="chapter-item expanded "><a href="strings/salcp.html"><strong aria-hidden="true">20.</strong> Suffix Array and LCP Array</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="geometry/convexhull.html"><strong aria-hidden="true">21.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="unclass/valcomp.html"><strong aria-hidden="true">22.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="unclass/lis.html"><strong aria-hidden="true">23.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded "><a href="unclass/mos.html"><strong aria-hidden="true">24.</strong> Mo's</a></li><li class="chapter-item expanded "><a href="unclass/bigint.html"><strong aria-hidden="true">25.</strong> Arbitrary-Precision Integer</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="misc/fastio.html"><strong aria-hidden="true">26.</strong> Fast IO</a></li><li class="chapter-item expanded "><a href="misc/macro.html"><strong aria-hidden="true">27.</strong> Macros</a></li><li class="chapter-item expanded "><a href="misc/zero_one_trait.html"><strong aria-hidden="true">28.</strong> Zero/One Trait (Deprecated)</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -4492,6 +4492,69 @@ where
     }
     dist
 }</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="dial"><a class="header" href="#dial">Dial</a></h1>
+<p>Dial algorithm is an alternative to Dijkstra algorithm, which can be used when the maximum value of the edge costs is small. Instead of using a heap, dial algorithm uses a queue of vectors to sort searched paths by their distances. Generally the performance of it is quite similar to that of Dijkstra, but if somehow you want to use this instead, then go ahead!</p>
+<p>The usage is exactly the same with Dijkstra algorithm, except that the name of the function is different.</p>
+<h2 id="code-12"><a class="header" href="#code-12">Code</a></h2>
+<pre><code class="language-rust noplayground">use std::num::*;
+impl_hasnz!(i8, NonZeroI8; i16, NonZeroI16; i32, NonZeroI32; i64, NonZeroI64; i128, NonZeroI128; isize, NonZeroIsize);
+impl_hasnz!(u8, NonZeroU8; u16, NonZeroU16; u32, NonZeroU32; u64, NonZeroU64; u128, NonZeroU128; usize, NonZeroUsize);
+
+use std::ops::*;
+fn dial&lt;T&gt;(graph: &amp;Graph&lt;T&gt;, src: usize) -&gt; Vec&lt;Option&lt;T&gt;&gt;
+where
+    T: Copy + From&lt;u8&gt; + Into&lt;u32&gt; + Add&lt;Output = T&gt; + Sub&lt;Output = T&gt; + Eq + Ord + HasNz,
+    &lt;T as HasNz&gt;::Nz: Copy,
+{
+    let max_cost: u32 = graph.edge.iter().map(|x| x.2.into()).max().unwrap_or(0);
+
+    let mut dist: Vec&lt;Option&lt;T::Nz&gt;&gt; = vec![None; graph.n];
+    dist[src] = {
+        let one: T = 1.into();
+        one.into_nz()
+    };
+
+    let mut qcnt: usize = 1;
+    let mut queue = std::collections::VecDeque::with_capacity(max_cost as usize + 2);
+    for _ in 0..=queue.capacity() {
+        queue.push_back(vec![]);
+    }
+    queue[0].push(src as u32);
+
+    let mut curr_cost: T = 0.into();
+    while qcnt != 0 {
+        curr_cost = curr_cost + 1.into();
+        let mut hand = queue.pop_front().unwrap();
+
+        while let Some(curr) = hand.pop() {
+            qcnt -= 1;
+            if dist[curr as usize].map_or(false, |x| T::retrieve(x) &lt; curr_cost) {
+                continue;
+            }
+
+            for (next, &amp;weight) in graph.neighbor(curr as usize) {
+                let next_cost = curr_cost + weight;
+
+                if dist[next].map_or(true, |x| T::retrieve(x) &gt; next_cost) {
+                    dist[next] = next_cost.into_nz();
+
+                    qcnt += 1;
+                    if weight == 0.into() {
+                        hand.push(next as u32);
+                    } else {
+                        queue[weight.into() as usize - 1].push(next as u32);
+                    }
+                }
+            }
+        }
+
+        queue.push_back(hand);
+    }
+
+    dist.iter()
+        .map(|x| x.map(|x| T::retrieve(x) - 1.into()))
+        .collect()
+}</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="disjoint-set-union"><a class="header" href="#disjoint-set-union">Disjoint Set Union</a></h1>
 <p>Disjoint set union data structure.</p>
 <h2 id="example-13"><a class="header" href="#example-13">Example</a></h2>
@@ -4540,7 +4603,7 @@ println!(&quot;{}&quot;, uf.is_differ(2, 6)); // true
 uf.union(2, 6);
 println!(&quot;{}&quot;, uf.is_differ(2, 6)); // false
 <span class="boring">}</span></code></pre></pre>
-<h2 id="code-12"><a class="header" href="#code-12">Code</a></h2>
+<h2 id="code-13"><a class="header" href="#code-13">Code</a></h2>
 <pre><code class="language-rust noplayground">struct UnionFind {
     n: usize,
     parent: Vec&lt;usize&gt;,
@@ -4590,7 +4653,7 @@ impl UnionFind {
 }</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="weighted-dsu"><a class="header" href="#weighted-dsu">Weighted DSU</a></h1>
 <p>Disjoint set union where vertices have their own &quot;potential value&quot;.</p>
-<h2 id="code-13"><a class="header" href="#code-13">Code</a></h2>
+<h2 id="code-14"><a class="header" href="#code-14">Code</a></h2>
 <pre><code class="language-rust noplayground">struct WeightDSU {
     n: usize,
     group_num: usize,
@@ -4838,7 +4901,7 @@ println!(&quot;{:?}&quot;, scc.get_scc_ids()); // [0, 1, 0, 0, 2]
 </span><span class="boring">        }
 </span><span class="boring">    }
 </span><span class="boring">}</span></code></pre></pre>
-<h2 id="code-14"><a class="header" href="#code-14">Code</a></h2>
+<h2 id="code-15"><a class="header" href="#code-15">Code</a></h2>
 <pre><code class="language-rust noplayground">mod scc {
     use super::*;
     struct SccStack {
@@ -5201,7 +5264,7 @@ println!(&quot;{:?}&quot;, ts.solve()); // None
 </span><span class="boring">        }
 </span><span class="boring">    }
 </span><span class="boring">}</span></code></pre></pre>
-<h2 id="code-15"><a class="header" href="#code-15">Code</a></h2>
+<h2 id="code-16"><a class="header" href="#code-16">Code</a></h2>
 <pre><code class="language-rust noplayground">mod twosat {
     use super::{scc::*, *};
 
@@ -5341,7 +5404,7 @@ for &amp;t in targets.iter() {
 </span><span class="boring">        None
 </span><span class="boring">    }
 </span><span class="boring">}</span></code></pre></pre>
-<h2 id="code-16"><a class="header" href="#code-16">Code</a></h2>
+<h2 id="code-17"><a class="header" href="#code-17">Code</a></h2>
 <pre><code class="language-rust noplayground">struct KMPNeedle&lt;'n, T: PartialEq&gt; {
     p: &amp;'n [T],
     c: Vec&lt;usize&gt;,
@@ -5452,7 +5515,7 @@ for i in 0..s.len() {
 </span><span class="boring">
 </span><span class="boring">    mana
 </span><span class="boring">}</span></code></pre></pre>
-<h2 id="code-17"><a class="header" href="#code-17">Code</a></h2>
+<h2 id="code-18"><a class="header" href="#code-18">Code</a></h2>
 <pre><code class="language-rust noplayground">fn manacher&lt;T: Eq&gt;(arr: &amp;[T]) -&gt; Vec&lt;usize&gt; {
     let n = arr.len();
     let mut mana: Vec&lt;usize&gt; = vec![1; n];
@@ -5601,7 +5664,7 @@ println!(&quot;{:?}&quot;, lcp); // [x, 3, 0, 1, 1, 0, 2, 2]
 </span><span class="boring">    }
 </span><span class="boring">    (sa, lcp)
 </span><span class="boring">}</span></code></pre></pre>
-<h2 id="code-18"><a class="header" href="#code-18">Code</a></h2>
+<h2 id="code-19"><a class="header" href="#code-19">Code</a></h2>
 <pre><code class="language-rust noplayground">// Suffix array and LCP array
 // Reference: http://www.secmem.org/blog/2021/07/18/suffix-array-and-lcp/
 
@@ -5855,7 +5918,7 @@ println!(&quot;{:?}&quot;, original); // [1, 2, 4, 7, 9, 7, 4, 2, 1]
 </span><span class="boring">    let reevaluator: Vec&lt;&amp;T&gt; = compressor.iter().map(|x| *x.0).collect();
 </span><span class="boring">    (compressor, reevaluator)
 </span><span class="boring">}</span></code></pre></pre>
-<h2 id="code-19"><a class="header" href="#code-19">Code</a></h2>
+<h2 id="code-20"><a class="header" href="#code-20">Code</a></h2>
 <h3 id="w-hashmap"><a class="header" href="#w-hashmap">w/ HashMap</a></h3>
 <pre><code class="language-rust noplayground">/// compressor[original_value] = compressed_value
 /// reevaluator[compressed_value] = original_value
@@ -6033,7 +6096,7 @@ println!(&quot;{}&quot;, x);
 let mut y = Int::from_str(&quot;123456789123456789123456789123456789&quot;).unwrap();
 let z = &amp;y * &amp;c;
 println!(&quot;{}&quot;, y);</code></pre>
-<h2 id="code-20"><a class="header" href="#code-20">Code</a></h2>
+<h2 id="code-21"><a class="header" href="#code-21">Code</a></h2>
 <pre><code class="language-rust noplayground">mod bigint {
     use core::{
         fmt::Display,
@@ -6687,7 +6750,7 @@ let word = next!(str);
 out!(&quot;{} &quot;, a);
 outln!(&quot;{}&quot;, b);
 outln!(&quot;{:?}&quot;, [n, m]);</code></pre>
-<h2 id="code-21"><a class="header" href="#code-21">Code</a></h2>
+<h2 id="code-22"><a class="header" href="#code-22">Code</a></h2>
 <h3 id="for-linux-almost-every-ojs-including-atcoder"><a class="header" href="#for-linux-almost-every-ojs-including-atcoder">For Linux (Almost every OJs including AtCoder)</a></h3>
 <pre><code class="language-rust noplayground">#![no_main]
 
