deploy: 1b062b294d0fbc8e1711ab480a1a8d65aed1a39f

--- a/datastructure/rope.html
+++ b/datastructure/rope.html
@@ -149,6 +149,7 @@
                     <main>
                         <h1 id="rope"><a class="header" href="#rope">Rope</a></h1>
 <p>Rope acts as if it is a list, but inserting a value at an arbitrary position takes time complexity of amortized \( O(\log{N}) \). However, accessing values also takes amortized \( O(\log{N}) \) time. Building a rope from an iterator takes \( O(N) \).</p>
+<p>When accessing to elements, if you use immutable borrow; that is, borrowing through <code>rope.get(idx)</code> or immutably indexing a value like <code>let v = rope[3];</code>, then <strong>splaying doesn't happen</strong> and in the worst case the accessing could take \(O(N)\). Make sure to use <code>get_mut()</code> for performance.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>use rope::Rope;
