deploy: ae4801111376247de5368ebf751ffb985acf61a1

--- a/print.html
+++ b/print.html
@@ -1559,7 +1559,7 @@ impl&lt;T&gt; std::ops::IndexMut&lt;usize&gt; for Matrix&lt;T&gt; {
 For any other purpose, I highly recommend the <a href="https://docs.rs/bitset-core/latest/bitset_core/">bitset_core crate</a> which highly inspired this snippet.</p>
 <h2 id="usage-1"><a class="header" href="#usage-1">Usage</a></h2>
 <p>An array of <code>[u64; 4]</code> implements <code>BitSetOps</code> trait, therefore is recognized as a bitset. The number of booleans packed into the bitset can be found with <code>fn bit_len(&amp;self) -&gt; usize</code>.</p>
-<p>Refer to the <a href="datastructure/bitarray.html#apis">APIs</a> for further references.</p>
+<p>Refer to the <a href="datastructure/bitarray.html#apis">APIs</a> for further information.</p>
 <h2 id="example-8"><a class="header" href="#example-8">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust">use bitset::*;
 <span class="boring">
