--- a/datastructure/bitarray.html
+++ b/datastructure/bitarray.html
@@ -154,7 +154,7 @@
 For any other purpose, I highly recommend the <a href="https://docs.rs/bitset-core/latest/bitset_core/">bitset_core crate</a> which highly inspired this snippet.</p>
 <h2 id="usage"><a class="header" href="#usage">Usage</a></h2>
 <p>An array of <code>[u64; 4]</code> implements <code>BitSetOps</code> trait, therefore is recognized as a bitset. The number of booleans packed into the bitset can be found with <code>fn bit_len(&amp;self) -&gt; usize</code>.</p>
-<p>Refer to the <a href="#apis">APIs</a> for further references.</p>
+<p>Refer to the <a href="#apis">APIs</a> for further information.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust">use bitset::*;
 <span class="boring">
